src/lexer.cc
/* Generated by re2c */
#line 1 "src/lexer.re"
// vim:set ft=cpp:

#include "adlib/lib.h"
#include "adlib/set.h"
// "fixstr.h" must be included before "map.h"
#include "fixstr.h"
#include "adlib/map.h"

#include "lexer.h"

const char *SymbolNames[] = {
  "SymNone",
  "SymAuto",
  "SymBreak",
  "SymCase",
  "SymChar",
  "SymConst",
  "SymContinue",
  "SymDefault",
  "SymDo",
  "SymDouble",
  "SymElse",
  "SymEnum",
  "SymExtern",
  "SymFloat",
  "SymFor",
  "SymGoto",
  "SymIf",
  "SymInline",
  "SymInt",
  "SymLong",
  "SymRegister",
  "SymReturn",
  "SymShort",
  "SymSigned",
  "SymSizeof",
  "SymStatic",
  "SymStruct",
  "SymSwitch",
  "SymTypedef",
  "SymUnion",
  "SymUnsigned",
  "SymVoid",
  "SymVolatile",
  "SymWhile",
  "SymIdent",
  "SymLiteral",
  "SymOp",
  "SymSemicolon",
  "SymLPar",
  "SymRPar",
  "SymLBrkt",
  "SymRBrkt",
  "SymLBrace",
  "SymRBrace",
  "SymWS",
  "SymEOL",
  "SymComment",
  "SymBAD",
  "SymPPIf",
  "SymPPElse",
  "SymPPElif",
  "SymPPEndif",
  "SymPPDef",
  "SymPPOther",
  "SymEOF",
};

typedef Map<FixStr, Str *> InternMap;

Str *Intern(const char *ptr, Int len) {
  static InternMap *map = NULL;
  if (!map) {
    GCVar(map, new InternMap());
  }
  FixStr fs;
  fs.str = ptr;
  fs.len = len;
  Str *result = map->get(fs, NULL);
  if (!result) {
    result = new Str(ptr, len);
    // `ptr` above is an interior pointer whose contents may disappear
    // due to GC once the `SourceFile` object containing it is no
    // longer reachable.
    //
    // Therefore, we replace it with `result->c_str()`. This is not only
    // not an interior pointer, but is kept alive by the value that the
    // key is in use for.
    fs.str = result->c_str();
    map->add(fs, result);
  }
  return result;
}

#define PUSH_TOKEN(s) \
  token.sym = s; \
  goto pushtoken;

bool ReadSource(SourceFile *source) {
  if (!source->filedata) {
    source->filedata = ReadFile(source->filename);
  }
  return source->filedata != NULL;
}

bool Tokenize(SourceFile *source) {
  Str *input = source->filedata;
  const char *cursor = input->c_str();
  const char *marker = NULL;
  const char *ctxmarker = NULL;
  bool done = false;
  bool error = false;
  TokenList *result = new TokenList();
  Token token;
  while (!done) {
    const char *last = cursor;
    
#line 121 "src/lexer.cc"
{
	unsigned char yych;
	unsigned int yyaccept = 0;
	yych = *cursor;
	switch (yych) {
	case 0x00:	goto yy2;
	case '\t':
	case '\f':
	case ' ':	goto yy6;
	case '\n':	goto yy9;
	case '\r':	goto yy11;
	case '!':
	case '%':
	case '*':
	case '=':
	case '^':	goto yy12;
	case '"':	goto yy14;
	case '#':	goto yy15;
	case '&':	goto yy17;
	case '\'':	goto yy18;
	case '(':	goto yy19;
	case ')':	goto yy21;
	case '+':	goto yy23;
	case ',':
	case ':':
	case '?':
	case '~':	goto yy24;
	case '-':	goto yy25;
	case '.':	goto yy26;
	case '/':	goto yy27;
	case '0':	goto yy28;
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy30;
	case ';':	goto yy32;
	case '<':	goto yy34;
	case '>':	goto yy35;
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'h':
	case 'j':
	case 'k':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'x':
	case 'y':
	case 'z':	goto yy36;
	case 'L':	goto yy39;
	case '[':	goto yy40;
	case '\\':	goto yy42;
	case ']':	goto yy43;
	case 'a':	goto yy45;
	case 'b':	goto yy46;
	case 'c':	goto yy47;
	case 'd':	goto yy48;
	case 'e':	goto yy49;
	case 'f':	goto yy50;
	case 'g':	goto yy51;
	case 'i':	goto yy52;
	case 'l':	goto yy53;
	case 'r':	goto yy54;
	case 's':	goto yy55;
	case 't':	goto yy56;
	case 'u':	goto yy57;
	case 'v':	goto yy58;
	case 'w':	goto yy59;
	case '{':	goto yy60;
	case '|':	goto yy62;
	case '}':	goto yy63;
	default:	goto yy4;
	}
yy2:
	++cursor;
#line 211 "src/lexer.re"
	{ done = true; continue; }
#line 230 "src/lexer.cc"
yy4:
	++cursor;
yy5:
#line 212 "src/lexer.re"
	{ error = true; PUSH_TOKEN(SymBAD); }
#line 236 "src/lexer.cc"
yy6:
	yych = *++cursor;
	switch (yych) {
	case '\t':
	case '\f':
	case ' ':	goto yy6;
	default:	goto yy8;
	}
yy8:
#line 201 "src/lexer.re"
	{ PUSH_TOKEN(SymWS); }
#line 248 "src/lexer.cc"
yy9:
	++cursor;
yy10:
#line 199 "src/lexer.re"
	{ PUSH_TOKEN(SymEOL); }
#line 254 "src/lexer.cc"
yy11:
	yych = *++cursor;
	switch (yych) {
	case '\n':	goto yy9;
	default:	goto yy10;
	}
yy12:
	yych = *++cursor;
	switch (yych) {
	case '=':	goto yy65;
	default:	goto yy13;
	}
yy13:
#line 194 "src/lexer.re"
	{ PUSH_TOKEN(SymOp); }
#line 270 "src/lexer.cc"
yy14:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':	goto yy5;
	default:	goto yy68;
	}
yy15:
	yych = *++cursor;
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':	goto yy73;
	case '\t':
	case '\f':
	case ' ':	goto yy15;
	case 'd':	goto yy77;
	case 'e':	goto yy78;
	case 'i':	goto yy79;
	case 'u':	goto yy80;
	default:	goto yy75;
	}
yy17:
	yych = *++cursor;
	switch (yych) {
	case '&':
	case '=':	goto yy65;
	default:	goto yy13;
	}
yy18:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':
	case '\'':	goto yy5;
	case '\\':	goto yy82;
	default:	goto yy81;
	}
yy19:
	++cursor;
#line 188 "src/lexer.re"
	{ PUSH_TOKEN(SymLPar); }
#line 317 "src/lexer.cc"
yy21:
	++cursor;
#line 189 "src/lexer.re"
	{ PUSH_TOKEN(SymRPar); }
#line 322 "src/lexer.cc"
yy23:
	yych = *++cursor;
	switch (yych) {
	case '+':
	case '=':	goto yy65;
	default:	goto yy13;
	}
yy24:
	++cursor;
	goto yy13;
yy25:
	yych = *++cursor;
	switch (yych) {
	case '-':
	case '=':
	case '>':	goto yy65;
	default:	goto yy13;
	}
yy26:
	yyaccept = 1;
	yych = *(marker = ++cursor);
	switch (yych) {
	case '.':	goto yy83;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy84;
	default:	goto yy13;
	}
yy27:
	yyaccept = 1;
	yych = *(marker = ++cursor);
	switch (yych) {
	case '*':	goto yy87;
	case '/':	goto yy89;
	case '=':	goto yy65;
	default:	goto yy13;
	}
yy28:
	yyaccept = 2;
	yych = *(marker = ++cursor);
	switch (yych) {
	case '.':
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'E':
	case 'e':	goto yy93;
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy96;
	case 'X':
	case 'x':	goto yy98;
	default:	goto yy29;
	}
yy29:
#line 182 "src/lexer.re"
	{ PUSH_TOKEN(SymLiteral); }
#line 395 "src/lexer.cc"
yy30:
	yyaccept = 2;
	yych = *(marker = ++cursor);
	switch (yych) {
	case '.':	goto yy90;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy30;
	case 'E':
	case 'e':	goto yy95;
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy96;
	default:	goto yy29;
	}
yy32:
	++cursor;
#line 196 "src/lexer.re"
	{ PUSH_TOKEN(SymSemicolon); }
#line 423 "src/lexer.cc"
yy34:
	yych = *++cursor;
	switch (yych) {
	case '<':	goto yy99;
	case '=':	goto yy65;
	default:	goto yy13;
	}
yy35:
	yych = *++cursor;
	switch (yych) {
	case '=':	goto yy65;
	case '>':	goto yy99;
	default:	goto yy13;
	}
yy36:
	yych = *++cursor;
yy37:
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy36;
	default:	goto yy38;
	}
yy38:
#line 179 "src/lexer.re"
	{ PUSH_TOKEN(SymIdent); }
#line 510 "src/lexer.cc"
yy39:
	yyaccept = 3;
	yych = *(marker = ++cursor);
	switch (yych) {
	case '"':	goto yy67;
	case '\'':	goto yy100;
	default:	goto yy37;
	}
yy40:
	++cursor;
#line 190 "src/lexer.re"
	{ PUSH_TOKEN(SymLBrkt); }
#line 523 "src/lexer.cc"
yy42:
	yyaccept = 0;
	yych = *(marker = ++cursor);
	switch (yych) {
	case '\t':
	case '\n':
	case '\f':
	case '\r':
	case ' ':	goto yy102;
	default:	goto yy5;
	}
yy43:
	++cursor;
#line 191 "src/lexer.re"
	{ PUSH_TOKEN(SymRBrkt); }
#line 539 "src/lexer.cc"
yy45:
	yych = *++cursor;
	switch (yych) {
	case 'u':	goto yy106;
	default:	goto yy37;
	}
yy46:
	yych = *++cursor;
	switch (yych) {
	case 'r':	goto yy107;
	default:	goto yy37;
	}
yy47:
	yych = *++cursor;
	switch (yych) {
	case 'a':	goto yy108;
	case 'h':	goto yy109;
	case 'o':	goto yy110;
	default:	goto yy37;
	}
yy48:
	yych = *++cursor;
	switch (yych) {
	case 'e':	goto yy111;
	case 'o':	goto yy112;
	default:	goto yy37;
	}
yy49:
	yych = *++cursor;
	switch (yych) {
	case 'l':	goto yy114;
	case 'n':	goto yy115;
	case 'x':	goto yy116;
	default:	goto yy37;
	}
yy50:
	yych = *++cursor;
	switch (yych) {
	case 'l':	goto yy117;
	case 'o':	goto yy118;
	default:	goto yy37;
	}
yy51:
	yych = *++cursor;
	switch (yych) {
	case 'o':	goto yy119;
	default:	goto yy37;
	}
yy52:
	yych = *++cursor;
	switch (yych) {
	case 'f':	goto yy120;
	case 'n':	goto yy122;
	default:	goto yy37;
	}
yy53:
	yych = *++cursor;
	switch (yych) {
	case 'o':	goto yy123;
	default:	goto yy37;
	}
yy54:
	yych = *++cursor;
	switch (yych) {
	case 'e':	goto yy124;
	default:	goto yy37;
	}
yy55:
	yych = *++cursor;
	switch (yych) {
	case 'h':	goto yy125;
	case 'i':	goto yy126;
	case 't':	goto yy127;
	case 'w':	goto yy128;
	default:	goto yy37;
	}
yy56:
	yych = *++cursor;
	switch (yych) {
	case 'y':	goto yy129;
	default:	goto yy37;
	}
yy57:
	yych = *++cursor;
	switch (yych) {
	case 'n':	goto yy130;
	default:	goto yy37;
	}
yy58:
	yych = *++cursor;
	switch (yych) {
	case 'o':	goto yy131;
	default:	goto yy37;
	}
yy59:
	yych = *++cursor;
	switch (yych) {
	case 'h':	goto yy132;
	default:	goto yy37;
	}
yy60:
	++cursor;
#line 192 "src/lexer.re"
	{ PUSH_TOKEN(SymLBrace); }
#line 644 "src/lexer.cc"
yy62:
	yych = *++cursor;
	switch (yych) {
	case '=':
	case '|':	goto yy65;
	default:	goto yy13;
	}
yy63:
	++cursor;
#line 193 "src/lexer.re"
	{ PUSH_TOKEN(SymRBrace); }
#line 656 "src/lexer.cc"
yy65:
	++cursor;
yy66:
#line 195 "src/lexer.re"
	{ PUSH_TOKEN(SymOp); }
#line 662 "src/lexer.cc"
yy67:
	yych = *++cursor;
yy68:
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':	goto yy69;
	case '"':	goto yy70;
	case '\\':	goto yy72;
	default:	goto yy67;
	}
yy69:
	cursor = marker;
	switch (yyaccept) {
	case 0: 	goto yy5;
	case 1: 	goto yy13;
	case 2: 	goto yy29;
	case 3: 	goto yy38;
	case 4: 	goto yy86;
	case 5: 	goto yy91;
	default:	goto yy94;
	}
yy70:
	++cursor;
#line 184 "src/lexer.re"
	{ PUSH_TOKEN(SymLiteral); }
#line 689 "src/lexer.cc"
yy72:
	yych = *++cursor;
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':	goto yy69;
	default:	goto yy67;
	}
yy73:
	++cursor;
	cursor -= 1;
#line 210 "src/lexer.re"
	{ PUSH_TOKEN(SymPPOther); }
#line 703 "src/lexer.cc"
yy75:
	yych = *++cursor;
yy76:
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':	goto yy73;
	default:	goto yy75;
	}
yy77:
	yych = *++cursor;
	switch (yych) {
	case 'e':	goto yy133;
	default:	goto yy76;
	}
yy78:
	yych = *++cursor;
	switch (yych) {
	case 'l':	goto yy134;
	case 'n':	goto yy135;
	default:	goto yy76;
	}
yy79:
	yych = *++cursor;
	switch (yych) {
	case 'f':	goto yy136;
	default:	goto yy76;
	}
yy80:
	yych = *++cursor;
	switch (yych) {
	case 'n':	goto yy137;
	default:	goto yy76;
	}
yy81:
	yych = *++cursor;
	switch (yych) {
	case '\'':	goto yy138;
	default:	goto yy69;
	}
yy82:
	yych = *++cursor;
	switch (yych) {
	case '\'':
	case '\\':	goto yy140;
	default:	goto yy141;
	}
yy83:
	yych = *++cursor;
	switch (yych) {
	case '.':	goto yy65;
	default:	goto yy69;
	}
yy84:
	yyaccept = 4;
	yych = *(marker = ++cursor);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy84;
	case 'E':
	case 'e':	goto yy142;
	case 'F':
	case 'L':
	case 'f':
	case 'l':	goto yy143;
	default:	goto yy86;
	}
yy86:
#line 186 "src/lexer.re"
	{ PUSH_TOKEN(SymLiteral); }
#line 782 "src/lexer.cc"
yy87:
	++cursor;
#line 198 "src/lexer.re"
	{ goto comment; }
#line 787 "src/lexer.cc"
yy89:
	yych = *++cursor;
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':	goto yy69;
	default:	goto yy144;
	}
yy90:
	yyaccept = 5;
	yych = *(marker = ++cursor);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy84;
	case 'E':
	case 'e':	goto yy147;
	case 'F':
	case 'L':
	case 'f':
	case 'l':	goto yy148;
	default:	goto yy91;
	}
yy91:
#line 187 "src/lexer.re"
	{ PUSH_TOKEN(SymLiteral); }
#line 821 "src/lexer.cc"
yy92:
	yyaccept = 6;
	yych = *(marker = ++cursor);
yy93:
	switch (yych) {
	case '.':	goto yy90;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':	goto yy92;
	case '8':
	case '9':	goto yy30;
	case 'E':
	case 'e':	goto yy95;
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy149;
	default:	goto yy94;
	}
yy94:
#line 181 "src/lexer.re"
	{ PUSH_TOKEN(SymLiteral); }
#line 849 "src/lexer.cc"
yy95:
	yych = *++cursor;
	switch (yych) {
	case '+':
	case '-':	goto yy151;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy152;
	default:	goto yy69;
	}
yy96:
	yych = *++cursor;
	switch (yych) {
	case 'L':
	case 'U':
	case 'l':
	case 'u':	goto yy96;
	default:	goto yy29;
	}
yy98:
	yych = *++cursor;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy155;
	default:	goto yy69;
	}
yy99:
	yych = *++cursor;
	switch (yych) {
	case '=':	goto yy65;
	default:	goto yy66;
	}
yy100:
	yych = *++cursor;
	switch (yych) {
	case 0x00:
	case '\n':
	case '\r':
	case '\'':	goto yy69;
	case '\\':	goto yy82;
	default:	goto yy81;
	}
yy101:
	yych = *++cursor;
yy102:
	switch (yych) {
	case '\t':
	case '\f':
	case ' ':	goto yy101;
	case '\n':
		ctxmarker = cursor;
		goto yy103;
	case '\r':
		ctxmarker = cursor;
		goto yy105;
	default:	goto yy69;
	}
yy103:
	++cursor;
yy104:
	cursor = ctxmarker;
#line 200 "src/lexer.re"
	{ PUSH_TOKEN(SymWS); }
#line 940 "src/lexer.cc"
yy105:
	yych = *++cursor;
	switch (yych) {
	case '\n':	goto yy103;
	default:	goto yy104;
	}
yy106:
	yych = *++cursor;
	switch (yych) {
	case 't':	goto yy158;
	default:	goto yy37;
	}
yy107:
	yych = *++cursor;
	switch (yych) {
	case 'e':	goto yy159;
	default:	goto yy37;
	}
yy108:
	yych = *++cursor;
	switch (yych) {
	case 's':	goto yy160;
	default:	goto yy37;
	}
yy109:
	yych = *++cursor;
	switch (yych) {
	case 'a':	goto yy161;
	default:	goto yy37;
	}
yy110:
	yych = *++cursor;
	switch (yych) {
	case 'n':	goto yy162;
	default:	goto yy37;
	}
yy111:
	yych = *++cursor;
	switch (yych) {
	case 'f':	goto yy163;
	default:	goto yy37;
	}
yy112:
	yych = *++cursor;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy36;
	case 'u':	goto yy164;
	default:	goto yy113;
	}
yy113:
#line 153 "src/lexer.re"
	{ PUSH_TOKEN(SymDo); }
#line 1054 "src/lexer.cc"
yy114:
	yych = *++cursor;
	switch (yych) {
	case 's':	goto yy165;
	default:	goto yy37;
	}
yy115:
	yych = *++cursor;
	switch (yych) {
	case 'u':	goto yy166;
	default:	goto yy37;
	}
yy116:
	yych = *++cursor;
	switch (yych) {
	case 't':	goto yy167;
	default:	goto yy37;
	}
yy117:
	yych = *++cursor;
	switch (yych) {
	case 'o':	goto yy168;
	default:	goto yy37;
	}
yy118:
	yych = *++cursor;
	switch (yych) {
	case 'r':	goto yy169;
	default:	goto yy37;
	}
yy119:
	yych = *++cursor;
	switch (yych) {
	case 't':	goto yy171;
	default:	goto yy37;
	}
yy120:
	yych = *++cursor;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'G':
	case 'H':
	case 'I':
	case 'J':
	case 'K':
	case 'L':
	case 'M':
	case 'N':
	case 'O':
	case 'P':
	case 'Q':
	case 'R':
	case 'S':
	case 'T':
	case 'U':
	case 'V':
	case 'W':
	case 'X':
	case 'Y':
	case 'Z':
	case '_':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':
	case 'g':
	case 'h':
	case 'i':
	case 'j':
	case 'k':
	case 'l':
	case 'm':
	case 'n':
	case 'o':
	case 'p':
	case 'q':
	case 'r':
	case 's':
	case 't':
	case 'u':
	case 'v':
	case 'w':
	case 'x':
	case 'y':
	case 'z':	goto yy36;
	default:	goto yy121;
	}
yy121:
#line 161 "src/lexer.re"
	{ PUSH_TOKEN(SymIf); }
#line 1162 "src/lexer.cc"
yy122:
	yych = *++cursor;
	switch (yych) {
	case 'l':	goto yy172;
	case 't':	goto yy173;
	default:	goto yy37;
	}
yy123:
	yych = *++cursor;
	switch (yych) {
	case 'n':	goto yy175;
	default:	goto yy37;
	}
yy124:
	yych = *++cursor;
	switch (yych) {
	case 'g':	goto yy176;
	case 't':	goto yy177;
	default:	goto yy37;
	}
yy125:
	yych = *++cursor;
	switch (yych) {
	case 'o':	goto yy178;
	default:	goto yy37;
	}
yy126:
	yych = *++cursor;
	switch (yych) {
	case 'g':	goto yy179;
	case 'z':	goto yy180;
	default:	goto yy37;
	}
yy127:
	yych = *++cursor;
	switch (yych) {
	case 'a':	goto yy181;
	case 'r':	goto yy182;
	default:	goto yy37;
	}
yy128:
	yych = *++cursor;
	switch (yych) {
	case 'i':	goto yy183;
	default:	goto yy37;
	}
